# QQ-GitHub-Bot

./: .dockerignore  .editorconfig  .env  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  LICENSE  README.md  bot.py  docker-compose.full.yml  docker-compose.yml  download_wkhtmltox.sh  install_wkhtmltox.sh  prestart.sh  pyproject.toml  test.html
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: deploy.yml  docker_release.yml  pyright.yml  release-sentry.yml  release-status.yml  release.yml  ruff.yml
bot/: config.yml
docker/: gunicorn_conf.py  start.sh
k8s/bot/: Chart.yaml  values.schema.json  values.yaml
k8s/bot/templates/: _helpers.tpl
k8s/bot/templates/nonebot/: deployment.yaml  ingress.yaml  middleware.yml  migrate.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/bot/templates/postgres/: backup.yaml  deployment.yaml  service.yaml  volume-claim.yaml  volume.yaml
k8s/bot/templates/redis/: deployment.yaml  service.yaml  volume-claim.yaml  volume.yaml
migrations/: README  env.py  script.py.mako
migrations/bot/: 0_20220913154541_init.sql  1_20221026151114_update.sql  1_20221031170901_update.sql
migrations/versions/: 14ab5b50ede5_migrate_to_new_form.py
scripts/: backup_redis.sh  database.py  download_wkhtmltox.sh  html_generate.py  setup_devcontainer.sh
src/libs/github/: __init__.py  request.py
src/libs/github/models/: __init__.py  comment.py  hook.py  issue.py  issue_pull_request.py  label.py  license.py  organization.py  permissions.py  pull_request.py  repository.py  timeline.py  user.py
src/libs/html2img/: __init__.py  api.py  config.py  imgkit.py  source.py  typing.py
src/libs/md2img/: __init__.py
src/libs/playwright/: __init__.py
src/libs/utils/: __init__.py
src/plugins/about/: __init__.py  apis.py
src/plugins/github/: __init__.py  config.py  context.py  utils.py
src/plugins/github/apis/: __init__.py  auth.py  hook.py
src/plugins/github/apis/templates/: auth.html.jinja
src/plugins/github/cache/: __init__.py  message_tag.py  opengraph.py  rendered_image.py  user_auth_state.py
src/plugins/github/dependencies/: __init__.py  commit.py  common.py  github.py  group.py  installation.py  issue.py  release.py  reply.py  repo.py  subscription.py  user.py
src/plugins/github/github_help/: __init__.py
src/plugins/github/helpers/: __init__.py  cancellation.py  event.py  github.py  group.py  image.py  permission.py  rule.py  user.py
src/plugins/github/libs/: __init__.py  auth.py  github.py  group.py  hook.py  install.py  issue.py  message_tag.py  opengraph.py  platform.py  redis.py  repo.py  user.py  user_auth.py
src/plugins/github/libs/cache/: __init__.py  user_auth_state.py
src/plugins/github/libs/issue/: __init__.py  comment.html  commit.html  issue.html  render.py  review.html  status.css
src/plugins/github/libs/issue/templates/: add-to-project.html  assigned.html  (+21 more)
src/plugins/github/libs/models/: __init__.py  qq.py  qqguild.py
src/plugins/github/libs/platform/: __init__.py  bot.py  group_crud.py  group_subscription_crud.py  info.py  user_crud.py  user_subscription_crud.py
src/plugins/github/libs/redis/: __init__.py  bind.py  hook.py  message.py  state.py  subscribe.py  token.py
src/plugins/github/libs/renderer/: __init__.py  context.py  filters.py  globals.py  render.py  utils.py
src/plugins/github/models/: __init__.py  group.py  group_subscription.py  subscription.py  user.py  user_subscription.py
src/plugins/github/plugins/github_auth/: __init__.py  dependencies.py
src/plugins/github/plugins/github_bind/: __init__.py  dependencies.py
src/plugins/github/plugins/github_contribution/: __init__.py
src/plugins/github/plugins/github_help/: __init__.py
src/plugins/github/plugins/github_install/: __init__.py  dependencies.py
src/plugins/github/plugins/github_issue/: __init__.py  dependencies.py  github.css
src/plugins/github/plugins/github_opengraph/: __init__.py  dependencies.py
src/plugins/github/plugins/github_reply/: __init__.py  _star.py  _unstar.py  approve.py  close.py  comment.py  content.py  dependencies.py  deployment.py  diff.py  label.py  license.py  link.py  merge.py  readme.py  release.py  reopen.py  repo.py  star.py  unlabel.py  unstar.py
src/plugins/github/plugins/github_repo/: __init__.py
src/plugins/github/plugins/github_search/: __init__.py
src/plugins/github/plugins/github_subscribe/: __init__.py  dependencies.py
src/plugins/github/utils/: __init__.py
src/plugins/github/webhooks/: _dependencies.py  issue_closed.py  issue_commented.py  issue_create.py  issue_opened.py  release_publish.py  star.py  unknown.py
src/plugins/health_check/: __init__.py
src/plugins/multi_status/: __init__.py  common.py  data_source.py  onebot_v11.py
src/plugins/nonebot_plugin_sentry/: README.md  __init__.py  config.py  pyproject.toml
src/plugins/nonebot_plugin_status/: README.md  __init__.py  common.py  config.py  data_source.py  helpers.py  onebot_v11.py  pyproject.toml
src/plugins/playwright/: __init__.py
src/plugins/redis/: __init__.py  config.py
src/plugins/redis_provider/: __init__.py  config.py
src/plugins/server_status/: __init__.py  config.py  data_source.py
src/plugins/tortoise/: __init__.py
src/providers/filehost/: __init__.py  config.py
src/providers/platform/: __init__.py  typing.py
src/providers/platform/entities/: __init__.py  _base.py  channel.py  group.py  message.py  user.py
src/providers/platform/extractors/: __init__.py  _base.py  onebot.py  qq.py
src/providers/platform/messages/: __init__.py
src/providers/platform/roles/: __init__.py
src/providers/platform/targets/: __init__.py  _base.py  group.py  user.py
src/providers/playwright/: __init__.py
src/providers/postgres/: __init__.py
src/providers/redis/: __init__.py  config.py
src/providers/sentry/: __init__.py
src/providers/tortoise/: __init__.py  config.py
src/utils/: __init__.py
tests/: conftest.py  test_status.py
(+137 files in other folders)
