[tool.poetry]
name = "qq-github-bot"
version = "2.0.5"
description = "GitHub Bot for QQ"
authors = ["yanyongyu <yyy@yyydl.top>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# pin anyio v3 due to fastapi incompatibility
anyio = "^3.7.1"
psutil = "^5.7.2"
Jinja2 = "^3.0.0"
unidiff = "^0.7.0"
humanize = "^4.0.0"
asyncpg = "^0.29.0"
playwright = "^1.17.2"
mdit-py-emoji = "^0.1.0"
nonebot-plugin-orm = "^0.6.0"
nonebot-adapter-qq = "^1.3.4"
nonebot-plugin-sentry = "^1.0.1"
nonebot-adapter-github = "^0.3.0"
nonebot-adapter-onebot = "^2.1.4"
nonebot-plugin-filehost = "^1.0.2"
redis = { version = "^5.0.0", extras = ["hiredis"] }
markdown-it-py = { version = "^3.0.0", extras = ["linkify", "plugins"] }
nonebot2 = { version = "^2.1.0", extras = ["httpx", "websockets", "fastapi"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
isort = "^5.9.3"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^21.1.0"
uvicorn = ">=0.18.3,<1.0.0"

[tool.black]
preview = true
target-version = ["py311", "py312"]
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

line-length = 88
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
extraPaths = ["./"]

pythonPlatform = "All"
executionEnvironments = [
  { root = "./src/plugins/nonebot_plugin_status", pythonVersion = "3.8" },
  { root = "./", pythonVersion = "3.11" },
]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
